# docker_tar_issue

./: .gitignore  README.md  WORKSPACE
subdir/: BUILD.bazel
