load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

# gazelle:ignore
container_image(
    name = "image",
    directory = "/etc/config",
    tars = [
        ":file_tar",
    ],
    ports = [
        "9091",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"])
)

pkg_tar(
    name = "file_tar",
    srcs = ["all_files"],
    strip_prefix = ".",
)